--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://hostevg1.bugfocus.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://ntm1.bugfocus.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: '0c75805a-eb5b-460b-89d0-0b4dd8fe4991',
-        apiUrl: 'https://hostevg1.bugfocus.com/clientweb/api/v1',
+        apiUrl: 'https://ntm1.bugfocus.com/clientweb/api/v1',
         tenantUrl: 'example.com',
-        chatPath: 'https://hostevg1.bugfocus.com/clientweb/chat-client-v4/'
+        chatPath: 'https://ntm1.bugfocus.com/clientweb/chat-client-v4/'
 
         /*        
          // Default customer data, it can be collected on current site's context
@@ -26,4 +26,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  		*/
     };
 </script>
-<script src="https://hostevg1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
