--- a/index.html
+++ b/index.html
@@ -28,3 +28,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 </script>
 <script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
 </body>
+</html>
