--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
 <body style="background-color:DARKSLATEBLUE;">
 <img src="https://assets.rbl.ms/4170720/980x.jpg">
 
+<!-- You have to put this piece of JavaScript code into your web page
+Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
+-->
+<link type="text/css" rel="stylesheet" href="https://ntm1.bugfocus.com/clientweb/chat-client-v4/css/form.css">
+<script type="text/javascript">
+    SERVICE_PATTERN_CHAT_CONFIG = {
+        appId: 'd49c404e-b049-43b8-a818-cd92d047bb16',
+        apiUrl: 'https://ntm1.bugfocus.com/clientweb/api/v1',
+        tenantUrl: 'example.com',
+        chatPath: 'https://ntm1.bugfocus.com/clientweb/chat-client-v4/'
 
+        /*        
+         // Default customer data, it can be collected on current site's context
+         first_name: '',
+         last_name: '',
+         email: '',
+         phone_number: ''
+ 		*/
+    };
+</script>
+<script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
 
 </body>
 </html>
