--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     };
 </script>
 <script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
+ <div class="sp-callback-form" id="sp-callback-form">
+   <input type="tel" id="sp-callback-phone" placeholder="phone" />
+   <button id="sp-chat-submit-inline">Chat</button>
+   <button id="sp-callback-submit-inline">Call</button>
+</div>
 
 </body>
 </html>
