--- a/index.html
+++ b/index.html
@@ -28,9 +28,19 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 <script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
  <div class="sp-callback-form" id="sp-callback-form">
    <input type="tel" id="sp-callback-phone" placeholder="phone" />
-   <button id="sp-chat-submit-inline">Chat</button>
-   <button id="sp-callback-submit-inline">Call</button>
+   <label>phone</label>
+   <input type="tel" id="sp-callback-phone" placeholder="phone" />
+   <input type="email" id="sp-callback-phone" placeholder="phone" />
+   <input type="text" id="sp-callback-phone" placeholder="phone" />
+   <input type="text" id="sp-callback-phone" placeholder="phone" />
+   <input type="date" id="sp-callback-phone" placeholder="phone" />
+   <textarea id="sp-callback-phone" placeholder="phone" ></textarea>
+   <input type="range" id="sp-callback-phone"  min="null" max="null"/>
+   <select id="sp-callback-phone" placeholder="phone" >
+   </select>
+   <button id="sp-chat-submit-inline">Chat_changed</button>
 </div>
+
 
 </body>
 </html>
