--- a/index.html
+++ b/index.html
@@ -27,20 +27,19 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 </script>
 <script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
  <div class="sp-callback-form" id="sp-callback-form">
-   <input type="tel" id="sp-callback-phone" placeholder="phone" />
-   <label>phone</label>
-   <input type="tel" id="sp-callback-phone" placeholder="phone" />
-   <input type="email" id="sp-callback-phone" placeholder="phone" />
-   <input type="text" id="sp-callback-phone" placeholder="phone" />
-   <input type="text" id="sp-callback-phone" placeholder="phone" />
-   <input type="date" id="sp-callback-phone" placeholder="phone" />
-   <textarea id="sp-callback-phone" placeholder="phone" ></textarea>
-   <input type="range" id="sp-callback-phone"  min="null" max="null"/>
-   <select id="sp-callback-phone" placeholder="phone" >
+   <input type="tel" id="sp-callback-Phone number" placeholder="Phone number" />
+   <label>Label</label>
+   <input type="tel" id="sp-callback-Callback phone number" placeholder="Callback phone number" />
+   <input type="email" id="sp-callback-Email" placeholder="Email" />
+   <input type="text" id="sp-callback-Name" placeholder="Name" />
+   <input type="text" id="sp-callback-Text" placeholder="Text" />
+   <input type="date" id="sp-callback-Date" placeholder="Date" />
+   <textarea id="sp-callback-Multiline text" placeholder="Multiline text" ></textarea>
+   <input type="range" id="sp-callback-Numerical range slider"  min="null" max="null"/>
+   <select id="sp-callback-Selection list" placeholder="Selection list" >
    </select>
    <button id="sp-chat-submit-inline">Chat_changed</button>
 </div>
-
 
 </body>
 </html>
