--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
    <input type="date" id="sp-callback-Date" placeholder="Date" />
    <textarea id="sp-callback-Multiline text" placeholder="Multiline text" ></textarea>
    <input type="range" id="sp-callback-Numerical range slider"  min="null" max="null"/>
-   <button id="sp-chat-submit-inline">Chat</button>
+   <select id="sp-callback-Selection list" placeholder="Selection list" >
+   </select>
+   <button id="sp-chat-submit-inline">Chat_but</button>
 </div>
+
 
 </body>
 </html>
