--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  <div class="sp-callback-form" id="sp-callback-form">
    <input type="tel" id="sp-callback-Phone number" placeholder="Phone number" />
    <button id="sp-chat-submit-inline">Chat_but</button>
+   <button id="sp-callback-submit-inline">Call_but</button>
 </div>
 
 </body>
