--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 <script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
  <div class="sp-callback-form" id="sp-callback-form">
    <input type="tel" id="sp-callback-Phone number" placeholder="Phone number" />
+   <input type="range" id="sp-callback-Numerical range slider"  min="null" max="null"/>
+   <input type="text" id="sp-callback-Text" placeholder="Text" />
    <button id="sp-chat-submit-inline">Chat_but</button>
    <button id="sp-callback-submit-inline">Call_but</button>
 </div>
+
 
 </body>
 </html>
