--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://moon.brightpattern.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://ntm1.bugfocus.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: '3f7c50a5563e4055a68fc9936d3f645f',
-        apiUrl: 'https://moon.brightpattern.com/clientweb/api/v1',
-        tenantUrl: 'russell.brightpattern.com',
-        chatPath: 'https://moon.brightpattern.com/clientweb/chat-client-v4/'
+        appId: 'ab02c810f8b24dd390d64853d8dc0ff9',
+        apiUrl: 'https://ntm1.bugfocus.com/clientweb/api/v1',
+        tenantUrl: 'example.com',
+        chatPath: 'https://ntm1.bugfocus.com/clientweb/chat-client-v4/'
 
         /*        
          // Default customer data, it can be collected on current site's context
@@ -25,22 +25,14 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  		*/
     };
 </script>
-<script src="https://moon.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
  <div class="sp-callback-form" id="sp-callback-form">
-   <input type="tel" id="sp-callback-null" placeholder="Callback phone number" />
    <input type="tel" id="sp-callback-Phone number" placeholder="Phone number" />
-   <input type="email" id="sp-callback-Email" placeholder="Email" />
-   <input type="text" id="sp-callback-Name" placeholder="Name" />
-   <input type="text" id="sp-callback-Text" placeholder="Text" />
-   <input type="date" id="sp-callback-Date" placeholder="Date" />
-   <textarea id="sp-callback-Multiline text" placeholder="Multiline text" ></textarea>
    <input type="range" id="sp-callback-Numerical range slider"  min="null" max="null"/>
-   <select id="sp-callback-Selection list" placeholder="Selection list" >
-   </select>
-   <button id="sp-chat-submit-inline">Chat</button>
-   <button id="sp-callback-submit-inline">Call</button>
+   <input type="text" id="sp-callback-Text" placeholder="Text" />
+   <button id="sp-chat-submit-inline">Chat_but</button>
+   <button id="sp-callback-submit-inline">Call_but</button>
 </div>
-
 
 </body>
 </html>
