--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 </script>
 <script src="https://ntm1.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
  <div class="sp-callback-form" id="sp-callback-form">
+   <label>Label</label>
+   <input type="tel" id="sp-callback-Callback phone number" placeholder="Callback phone number" />
    <input type="tel" id="sp-callback-Phone number" placeholder="Phone number" />
-   <input type="range" id="sp-callback-Numerical range slider"  min="null" max="null"/>
+   <input type="email" id="sp-callback-Email" placeholder="Email" />
+   <input type="text" id="sp-callback-Name" placeholder="Name" />
    <input type="text" id="sp-callback-Text" placeholder="Text" />
+   <input type="date" id="sp-callback-Date" placeholder="Date" />
+   <textarea id="sp-callback-Multiline text" placeholder="Multiline text" ></textarea>
+   <input type="range" id="sp-callback-Numerical range slider"  min="null" max="null"/>
+   <select id="sp-callback-Selection list" placeholder="Selection list" >
+   </select>
    <button id="sp-chat-submit-inline">Chat_but</button>
    <button id="sp-callback-submit-inline">Call_but</button>
 </div>
